# noodle

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN_APP_SHELL.md  Dockerfile  LICENSE  PLAN_CODE_PARAMS.md  PLAN_DATA_PROTOCOL.md  PLAN_MESH_LANE.md  PLAN_NODE_CAD.md  PLAN_PARAMETRIC_CURVES.md  PLAN_PRINT_PHYSICS.md  PLAN_RETROENG.md  PLAN_SIM.md  PLAN_TRACE_IMAGE.md  PLAN_UNWRAP_NODE.md  PLAN_VIZ_ALGORITHMS.md  README.md  SKILL.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  mcp_server.py  pyproject.toml  requirements.txt  server.py  start.bat  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backends/: openscad.py  pythonocc.py
cad_nodes/: AGENT_HELP.md  __init__.py  api.py  casts.py  catalog.py  cli.py  copilot.py  executor.py  fonts.py  graph.py  mesh_extractor.py  slice_summary.py  store.py  toposort.py  transpiler.py  worker.py
cad_nodes/examples/: aliasing.json  attention.json  bolt-flange.json  cellular-automata.json  central-limit.json  container-tilt.json  convolution.json  csg-boolean.json  de-casteljau.json  dijkstra.json  drop-bounce.json  drop-in-bowl.json  drop-stack.json  flange.json  fourier-epicycles.json  galton-board.json  gear-row-fanout.json  gradient-descent.json  kmeans-voronoi.json  l-system.json  lego-brick.json  matrix-determinant.json  mesh-lane.json  neural-network.json  nucleus-sampling.json  overfitting.json  parametric-curves.json  parametric-gear.json  perceptron.json  perlin-noise.json  predicate-selectors.json  (+9 more)
docs/: FEEDBACK_FIX_GUIDE.md
tests/: test_api.py  test_engine.py  test_join.py  test_memo.py  test_mesh_lane.py  test_polyhedron.py  test_populate_voronoi3d.py  test_print.py  test_seed.py
webui/: home.html  index.html  library.html  nodes.html  viewer.js
(+2 files in other folders)
