[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noodle-cad"
version = "0.1.0"
description = "Node-based parametric CAD on build123d: web node editor, transpiler, MCP server and AI copilot"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
# Runtime deps stay pinned in requirements.txt (single source of truth — the
# Dockerfile installs from it); setuptools reads them from there.
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools]
packages = ["cad_nodes"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["projects", "webui"]

[tool.ruff.lint]
# Lean, high-signal set: pyflakes/pycodestyle errors + bugbear. Formatting is
# not enforced (yet) to avoid a repo-wide reformat; enable "I"/ruff-format later.
select = ["E", "F", "W", "B"]
ignore = [
    "E501",  # long lines: tolerated for now (templates/docstrings)
    "E741",  # ambiguous single-letter names, used in math helpers
]

[tool.ruff.lint.per-file-ignores]
# The transpiler PREAMBLE embeds worker-side helper source as strings; keep
# lint focused on the app code itself.
"cad_nodes/transpiler.py" = ["W605"]
# Tests import lazily on purpose (grouped by the feature under test).
"tests/*" = ["E402"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's `File(...)`/`Depends(...)` in defaults is the framework idiom.
extend-immutable-calls = ["fastapi.File", "fastapi.Depends", "fastapi.Query", "fastapi.Body"]
